Playing around without autogenerated client
