# src/server/go/api.go
@@ -22,6 +22,7 @@ import (
 // pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
 type DefaultApiRouter interface { 
 	Read(http.ResponseWriter, *http.Request)
+	Subscribe(http.ResponseWriter, *http.Request)
 	Write(http.ResponseWriter, *http.Request)
 }
 
@@ -32,5 +33,6 @@ type DefaultApiRouter interface {
 // and updated with the logic required for the API.
 type DefaultApiServicer interface { 
 	Read(context.Context, string) (ImplResponse, error)
-	Write(context.Context, map[string]interface{}) (ImplResponse, error)
+	Subscribe(context.Context, SubscribeRequest) (ImplResponse, error)
+	Write(context.Context, WriteRequest) (ImplResponse, error)
 }
