# src/server/go/model_permission_json.go
@@ -1,0 +1,42 @@
+/*
+ * Basin RPC API
+ *
+ * Basin RPC API
+ *
+ * API version: 1.0.11
+ * Contact: sestinj@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package server
+
+type PermissionJson struct {
+
+	Data []string `json:"data,omitempty"`
+
+	Capabilities []CapabilitySchema `json:"capabilities,omitempty"`
+
+	Entities []string `json:"entities,omitempty"`
+}
+
+// AssertPermissionJsonRequired checks if the required fields are not zero-ed
+func AssertPermissionJsonRequired(obj PermissionJson) error {
+	for _, el := range obj.Capabilities {
+		if err := AssertCapabilitySchemaRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertRecursePermissionJsonRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of PermissionJson (e.g. [][]PermissionJson), otherwise ErrTypeAssertionError is thrown.
+func AssertRecursePermissionJsonRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aPermissionJson, ok := obj.(PermissionJson)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertPermissionJsonRequired(aPermissionJson)
+	})
+}
