# src/server/go/model_subscribe_request.go
@@ -1,0 +1,50 @@
+/*
+ * Basin RPC API
+ *
+ * Basin RPC API
+ *
+ * API version: 1.0.11
+ * Contact: sestinj@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package server
+
+type SubscribeRequest struct {
+
+	Url string `json:"url"`
+
+	Permissions []PermissionJson `json:"permissions"`
+}
+
+// AssertSubscribeRequestRequired checks if the required fields are not zero-ed
+func AssertSubscribeRequestRequired(obj SubscribeRequest) error {
+	elements := map[string]interface{}{
+		"url": obj.Url,
+		"permissions": obj.Permissions,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	for _, el := range obj.Permissions {
+		if err := AssertPermissionJsonRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertRecurseSubscribeRequestRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of SubscribeRequest (e.g. [][]SubscribeRequest), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseSubscribeRequestRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aSubscribeRequest, ok := obj.(SubscribeRequest)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertSubscribeRequestRequired(aSubscribeRequest)
+	})
+}
