# src/server/go/model_write_request.go
@@ -1,0 +1,45 @@
+/*
+ * Basin RPC API
+ *
+ * Basin RPC API
+ *
+ * API version: 1.0.11
+ * Contact: sestinj@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package server
+
+type WriteRequest struct {
+
+	Url string `json:"url"`
+
+	Value string `json:"value"`
+}
+
+// AssertWriteRequestRequired checks if the required fields are not zero-ed
+func AssertWriteRequestRequired(obj WriteRequest) error {
+	elements := map[string]interface{}{
+		"url": obj.Url,
+		"value": obj.Value,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertRecurseWriteRequestRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of WriteRequest (e.g. [][]WriteRequest), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseWriteRequestRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aWriteRequest, ok := obj.(WriteRequest)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertWriteRequestRequired(aWriteRequest)
+	})
+}
